# entra-agent-id-auth-flow-demo

./: .env.example  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.ja.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: setup-pip-wrapper.sh
.github/: copilot-instructions.md
.github/instructions/: microsoft-foundry-terminology.instructions.md
docs/: agent-identity-oauth-flow-comparison.ja.md  agent-identity-oauth-flow-comparison.md  app-design.md  app-implementation-plan.md  architecture.ja.md  architecture.md  deployment.ja.md  deployment.md  entra-agent-id-overview.ja.md  entra-agent-id-overview.md  getting-started.ja.md  getting-started.md  infrastructure.ja.md  infrastructure.md  interactive-obo-implementation-plan.md
docs/internal/: app-design.md  app-implementation-plan.md  autonomous-agent-app-flow-implementation-plan.md  autonomous-agent-user-flow-implementation-plan.md  entra-id-oauth2-public-client-basics.md  interactive-obo-implementation-plan.md
labs/entra-agent-id/: README.md
labs/entra-agent-id/api/: get-autonomous-agent-user-token.http
labs/entra-agent-id/prereqs/: .terraform.lock.hcl  _variables.tf  main.tf  providers.tf  terraform.tf  terraform.tfvars.example
labs/entra-agent-id/scripts/: get-approle-id.py  get-token.py
src/: .env.example
src/agent/: README.ja.md  README.md  agent.yaml
src/agent/client/: invoke.py
src/agent/deploy/: hosted_agent.py
src/agent/entra-agent-id/: .gitignore  create-agent-user.py  grant-admin-consent-to-agent-identity.py  grant-approle-to-agent-identity.py  grant-consent-to-agent-identity.py  inspect-blueprint.py  set-blueprint-fic.py  set-blueprint-scope.py
src/agent/runtime/: .dockerignore  Dockerfile  config.py  main.py  request_context.py  requirements.txt
src/agent/runtime/auth/: token_exchange.py
src/agent/runtime/tools/: autonomous_app.py  autonomous_user.py  debug.py  interactive_obo.py  token_exchange.py
src/agent/scripts/: deploy-agent.py  invoke-agent.py  invoke-interactive-agent.py  query-debug.json  query.json
src/api/: create-agent-id-blueprint.http  create-agent-id-user.http  get-autonomous-agent-id-token.http  get-autonomous-agent-user-token.http
src/backend_api/: Dockerfile  README.ja.md  README.md  config.py  foundry_client.py  main.py  requirements.txt
src/backend_api/routes/: call_foundry_agent.py
src/entra_id/api/: create-agent-id.http  get-autonomous-agent-id-token.http
src/entra_id/prereqs/: main.tf  outputs.tf  providers.tf  terraform.tf
src/entra_id/scripts/: get-approle-id.py  get-token.py
src/frontend/: .env.example  README.ja.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/scripts/: deploy-swa.py
src/frontend/src/: App.css  App.tsx  authConfig.ts  index.css  main.tsx  vite-env.d.ts
src/frontend/src/api/: backendApi.ts  foundryAgentApi.ts  identityEchoApi.ts
src/frontend/src/components/: AutonomousChatPanel.tsx  CallerInfo.tsx  InteractiveOboPanel.tsx  TokenChainSteps.tsx  TopBar.tsx
src/frontend/src/i18n/: index.ts
src/frontend/src/i18n/locales/: en.json  ja.json
src/frontend/src/utils/: extractAgentToolOutput.ts
src/identity_echo_api/: .env.example  Dockerfile  README.ja.md  README.md  config.py  main.py  requirements.txt
src/identity_echo_api/auth/: token_validator.py
src/identity_echo_api/routes/: resource.py
src/infra/: .terraform.lock.hcl  .tflint.hcl  README.ja.md  README.md  _locals.naming.tf  _locals.tf  _variables.adapp.client-spa.tf  _variables.adapp.identity-echo-api.tf  _variables.containerapp.tf  _variables.foundry.tf  _variables.swa.tf  _variables.tags.tf  _variables.tf  data.tf  main.acr.tf  main.adapp.client-spa.tf  main.adapp.identity-echo-api.tf  main.appinsights.tf  main.cognitive.capabilityhost.tf  main.cognitive.connection.appinsights.tf  main.cognitive.deployment.tf  main.cognitive.project.tf  main.cognitive.seed-agent.tf  main.cognitive.tf  main.containerapp.apps.tf  main.containerapp.tf  main.loganalytics.tf  main.rbac.definitions.tf  main.rbac.services.tf  main.rbac.users.tf  main.rg.tf  main.swa.tf  outputs.tf  providers.tf  terraform.tf  terraform.tfvars.example
src/infra/scripts/: see-agent.py
src/scripts/: deploy-container-apps.py  setup-app-registration.py  sync-infra-env.py
